2008-08-12  Johan Dahlin  <johan@flumotion.com>

	* data/glade/overlay-wizard.glade: Add a tooltip for the
	show logo checkbutton. Fixes #1094

2008-08-11  Johan Dahlin  <johan@flumotion.com>

	* flumotion/wizard/Makefile.am (flumotion_PYTHON):
	And remove configurationwizard.py from here.

2008-08-11  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/Makefile.am (SUBDIRS): Add assistant here too,
	this should fix distcheck.

2008-08-11  Johan Dahlin  <johan@flumotion.com>

	* data/glade/sectionwizard.glade:
	* flumotion/admin/assistant/interfaces.py:
	* flumotion/admin/gtk/Makefile.am:
	* flumotion/admin/gtk/addformatassistant.py:
	* flumotion/admin/gtk/addformatwizard.py:
	* flumotion/admin/gtk/adminwindow.py:
	* flumotion/admin/gtk/configurationassistant.py:
	* flumotion/test/test_public_ui_api.py:
	* flumotion/test/test_wizard.py:
	* flumotion/wizard/configurationwizard.py:
	* flumotion/wizard/scenarios.py:
	Rename configurationwizard and move it to f/admin/gtk.
	Rename addformatwizard too.

2008-08-11  Johan Dahlin  <johan@flumotion.com>

	* configure.ac:
	* flumotion/admin/assistant/Makefile.am:
	* flumotion/admin/assistant/__init__.py:
	* flumotion/admin/assistant/configurationwriter.py:
	* flumotion/admin/assistant/interfaces.py:
	* flumotion/admin/assistant/models.py:
	* flumotion/admin/assistant/save.py:
	* flumotion/admin/gtk/adminwindow.py:
	* flumotion/component/encoders/dirac/wizard_gtk.py:
	* flumotion/component/encoders/jpeg/wizard_gtk.py:
	* flumotion/component/encoders/mulaw/wizard_gtk.py:
	* flumotion/component/encoders/smoke/wizard_gtk.py:
	* flumotion/component/encoders/speex/wizard_gtk.py:
	* flumotion/component/encoders/theora/wizard_gtk.py:
	* flumotion/component/encoders/vorbis/wizard_gtk.py:
	* flumotion/component/plugs/cortado/wizard_gtk.py:
	* flumotion/component/producers/audiotest/wizard_gtk.py:
	* flumotion/component/producers/bttv/wizard_gtk.py:
	* flumotion/component/producers/firewire/wizard_gtk.py: